translation bahasa card data pegawai, membuat layout card data pegawai

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,4 +8,7 @@
     <string name="card_pelanggan_alamat">Address</string>
     <string name="card_pelanggan_hubungi">Contact</string>
     <string name="card_pelanggan_lihat">See</string>
+    <string name="card_pegawai_cabang">Branch</string>
+    <string name="card_pegawai_id">Employee ID</string>
+    <string name="card_pegawai_nama">Employee Name</string>
 </resources>
