--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -17,4 +17,5 @@
     <string name="card_tambah_nohp_aktif">No HP Aktif</string>
     <string name="card_nama_cabang">Nama Cabang</string>
     <string name="card_simpan">Simpan</string>
+    <string name="card_tambah_pegawai">Tambah Pegawai</string>
 </resources>
