--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="card_tambah_nohp_aktif">nohp_aktif</string>
     <string name="card_nama_cabang">nama_cabang</string>
     <string name="card_simpan">simpan</string>
+    <string name="card_tambah_pegawai">tambah_pegawai</string>
 </resources>
