Menambah fungsi atau logic simpan data, pelanggan dan pegawai

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,4 +18,41 @@
     <string name="card_nama_cabang">Branch Name</string>
     <string name="card_simpan">Save</string>
     <string name="card_tambah_pegawai">ADD EMPLOYEE</string>
+    <string name="card_layanan_id">"Service ID "</string>
+    <string name="card_layanan_nama">"Service Name "</string>
+    <string name="card_layanan_harga">Price</string>
+    <string name="card_tambah_layanan">"ADD SERVICES "</string>
+    <string name="card_pegawai_terdaftar">Registered</string>
+    <string name="validasi_nama_pelanggan">"Name cannot be empty "</string>
+    <string name="validasi_alamat_pelanggan">"The address cannot be empty "</string>
+    <string name="validasi_noHP_pelanggan">"The cellphone number cannot be empty "</string>
+    <string name="validasi_cabang_pelanggan">"Branches cannot be empty "</string>
+    <string name="tambah_pelanggan_sukses">"Add customer successfully "</string>
+    <string name="tambah_pelanggan_gagal">"Add customer failed "</string>
+    <string name="card_pegawai_nohp">No Handphone</string>
+    <string name="card_pegawai_hubungi">Contact</string>
+    <string name="card_pegawai_lihat">See</string>
+    <string name="card_pegawai_alamat">Address</string>
+    <string name="card_tambah_alamat">Address</string>
+    <string name="card_tambah_cabang">Branch Name</string>
+    <string name="card_pegawai_simpan">Save</string>
+    <string name="card_pelanggan_simpan">Save</string>
+    <string name="card_layanan_cabang">Branch</string>
+    <string name="validasi_nama_pegawai">Imployee Name</string>
+    <string name="validasi_alamat_pegawai">Imployee Address</string>
+    <string name="validasi_nohp_pegawai">No HandPhone</string>
+    <string name="validasi_terdaftar_pegawai">Registered</string>
+    <string name="validasi_namacabang_pegawai">Branch Name</string>
+    <string name="sukses_simpan_pegawai">"Add imployee successfully "</string>
+    <string name="gagal_simpan_pegawai">"Add imployee failed "</string>
+    <string name="validasi_terdaftar_pelanggan">Registered</string>
+    <string name="card_tambah_pelanggan_terdaftar">Registered</string>
+    <string name="card_tambah_pelanggan_nohp_aktif">Active No HP</string>
+    <string name="card_tambah_pelanggan_alamat">Address</string>
+    <string name="card_tambah_pelanggan_nama">Full Name</string>
+    <string name="card_tambah_pegawai_cabang">Branch Name</string>
+    <string name="card_tambah_pegawai_terdaftar">Registered</string>
+    <string name="card_tambah_pegawai_nohp_aktif">Active No Hp</string>
+    <string name="card_tambah_pegawai_alamat">Address</string>
+    <string name="card_tambah_pegawai_nama">Full Name</string>
 </resources>
