--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -18,4 +18,41 @@
     <string name="card_nama_cabang">Nama Cabang</string>
     <string name="card_simpan">Simpan</string>
     <string name="card_tambah_pegawai">" TAMBAH PEGAWAI"</string>
+    <string name="card_layanan_id">ID Layanan</string>
+    <string name="card_layanan_nama">Nama Layanan</string>
+    <string name="card_layanan_harga">Harga</string>
+    <string name="card_tambah_layanan">TAMBAH LAYANAN</string>
+    <string name="card_pegawai_terdaftar">Terdaftar</string>
+    <string name="validasi_nama_pelanggan">Nama tidak boleh kosong</string>
+    <string name="validasi_alamat_pelanggan">Alamat tidak boleh kosong</string>
+    <string name="validasi_noHP_pelanggan">No HP tidak boleh kosong</string>
+    <string name="validasi_cabang_pelanggan">Cabang tidak boleh kosong</string>
+    <string name="tambah_pelanggan_sukses">Tambah pelanggan berhasil</string>
+    <string name="tambah_pelanggan_gagal">Tambah pelanggan gagal</string>
+    <string name="card_pegawai_alamat">Alamat</string>
+    <string name="card_pegawai_nohp">No Telepon</string>
+    <string name="card_pegawai_hubungi">Hubungi</string>
+    <string name="card_pegawai_lihat">Lihat</string>
+    <string name="card_tambah_alamat">Alamat</string>
+    <string name="card_tambah_cabang">Nama Cabang</string>
+    <string name="card_pegawai_simpan">Simpan</string>
+    <string name="card_pelanggan_simpan">Simpan</string>
+    <string name="card_layanan_cabang">Cabang</string>
+    <string name="validasi_nama_pegawai">Nama Pegawai</string>
+    <string name="validasi_alamat_pegawai">Alamat Pegawai</string>
+    <string name="validasi_nohp_pegawai">No Telepon</string>
+    <string name="validasi_terdaftar_pegawai">Terdaftar</string>
+    <string name="validasi_namacabang_pegawai">Nama Cabang</string>
+    <string name="sukses_simpan_pegawai">Tambah pegawai berhasil</string>
+    <string name="gagal_simpan_pegawai">Tambah pegawai gagal</string>
+    <string name="validasi_terdaftar_pelanggan">Terdaftar</string>
+    <string name="card_tambah_pelanggan_terdaftar">Terdaftar</string>
+    <string name="card_tambah_pelanggan_nohp_aktif">No HP aktif</string>
+    <string name="card_tambah_pelanggan_alamat">Alamat</string>
+    <string name="card_tambah_pelanggan_nama">Nama Lengkap</string>
+    <string name="card_tambah_pegawai_cabang">Nama Cabang</string>
+    <string name="card_tambah_pegawai_terdaftar">Terdaftar</string>
+    <string name="card_tambah_pegawai_nohp_aktif">No Hp Aktif</string>
+    <string name="card_tambah_pegawai_alamat">"Alamat "</string>
+    <string name="card_tambah_pegawai_nama">Nama Lengkap</string>
 </resources>
