--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,41 @@
     <string name="card_nama_cabang">nama_cabang</string>
     <string name="card_simpan">simpan</string>
     <string name="card_tambah_pegawai">tambah_pegawai</string>
+    <string name="card_layanan_id">id_layanan</string>
+    <string name="card_layanan_nama">nama</string>
+    <string name="card_layanan_harga">harga</string>
+    <string name="card_tambah_layanan">tambah_layanan</string>
+    <string name="card_pegawai_terdaftar">terdaftar</string>
+    <string name="validasi_nama_pelanggan">nama_tidak_boleh_kosong</string>
+    <string name="validasi_alamat_pelanggan">alamat_tidak_boleh_kosong</string>
+    <string name="validasi_noHP_pelanggan">noHP_tidak_boleh_kosong</string>
+    <string name="validasi_cabang_pelanggan">cabang_tidak_boleh_kosong</string>
+    <string name="tambah_pelanggan_sukses">pelanggan_sukses</string>
+    <string name="tambah_pelanggan_gagal">pelanggan_gagal</string>
+    <string name="card_pegawai_alamat">pegawai_alamat</string>
+    <string name="card_pegawai_nohp">pegawai_nohp</string>
+    <string name="card_pegawai_hubungi">pegawai_hubungi</string>
+    <string name="card_pegawai_lihat">pegawai_lihat</string>
+    <string name="card_tambah_alamat">tambah_alamat</string>
+    <string name="card_tambah_cabang">tambah_cabang</string>
+    <string name="card_pegawai_simpan">pegawai_simpan</string>
+    <string name="card_pelanggan_simpan">pelanggan_simpan</string>
+    <string name="card_layanan_cabang">layanan_cabang</string>
+    <string name="validasi_nama_pegawai">nama_pegawai</string>
+    <string name="validasi_alamat_pegawai">alamat_pegawai</string>
+    <string name="validasi_nohp_pegawai">nohp_pegawai</string>
+    <string name="validasi_terdaftar_pegawai">terdaftar_pegawai</string>
+    <string name="validasi_namacabang_pegawai">namacabang_pegawai</string>
+    <string name="sukses_simpan_pegawai">simpan_pegawai</string>
+    <string name="gagal_simpan_pegawai">gagalsi_simpan_pegawai</string>
+    <string name="validasi_terdaftar_pelanggan">terdaftar_pelanggan</string>
+    <string name="card_tambah_pelanggan_terdaftar">tambah_pelanggan_terdaftar</string>
+    <string name="card_tambah_pelanggan_nohp_aktif">tambah_pelanggan_nohp_aktif</string>
+    <string name="card_tambah_pelanggan_alamat">tambah_pelanggan_alamat</string>
+    <string name="card_tambah_pelanggan_nama">tambah_pelanggan_nama</string>
+    <string name="card_tambah_pegawai_cabang">tambah_pegawai_cabang</string>
+    <string name="card_tambah_pegawai_terdaftar">tambah_pegawai_terdaftar</string>
+    <string name="card_tambah_pegawai_nohp_aktif">tambah_pegawai_nohp_aktif</string>
+    <string name="card_tambah_pegawai_alamat">tambah_pegawai_alamat</string>
+    <string name="card_tambah_pegawai_nama">tambah_pegawai_nama</string>
 </resources>
