--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,6 @@
     <string name="validasi_cabang_layanan">cabang_layanan</string>
     <string name="sukses_simpan_layanan">simpan_layanan</string>
     <string name="gagal_simpan_layanan">gagal_simpan_layanan</string>
+    <string name="sukses_simpan_pelanggan">sukses_simpan_pelanggan</string>
+    <string name="gagal_simpan_pelanggan">gagal_simpan_pelanggan</string>
 </resources>
