menambahkan fungsi login & register, memperbaiki transaksi, fungsi pilih pelanggan & layanan, dan membuat layout & fungsi konfirm data, metode pembayaran, cetak, kirim whatsApp, menambahkan cabang, membuat dialog mod pegawai & pelanggan, dan menambahkann fungsi search pada pilih pelanggan & layanan

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -76,7 +76,7 @@
     <string name="StatusPembayaran">"Payment Status "</string>
     <string name="Layanan_Tambahan">Additio al Services</string>
     <string name="Total_Bayar">"Total Pay "</string>
-    <string name="Btn_statuspembayaran">Btn</string>
+    <string name="Btn_statuspembayaran">Metode</string>
     <string name="card_pelanggan_pilih_alamat">Address</string>
     <string name="card_pelanggan_pilih_nohp">No HP</string>
     <string name="card_pelanggan_pilih_nama">Customer Name</string>
@@ -86,4 +86,49 @@
     <string name="btntransaksi_pilihlayanan">Select Service</string>
     <string name="btntransaksi_tambahan">Addition</string>
     <string name="btntransaksi_proses">Process</string>
+    <string name="card_data_layanan_harga">Price</string>
+    <string name="card_data_tambahkan_id">Add ID</string>
+    <string name="card_data_tambahkan_nama">Add :</string>
+    <string name="card_data_tambahkan_harga">Price :</string>
+    <string name="tambah_tambahan">Add</string>
+    <string name="tambahan_nama">Name</string>
+    <string name="tambahan_harga">Price</string>
+    <string name="tambah_pelanggan">Save</string>
+    <string name="validasi_nama_tambahkan">Fill in the name</string>
+    <string name="validasi_harga_tambahkan">Fill in the price</string>
+    <string name="tambah_tambahanlayanan">Save</string>
+    <string name="card_cabang_id">ID Branch</string>
+    <string name="card_cabang_nama">Branch Name</string>
+    <string name="card_cabang_alamat">Branch Address</string>
+    <string name="card_cabang_layanan">Branch Service</string>
+    <string name="card_cabang_hubungi">Contact</string>
+    <string name="card_cabang_lihat">See</string>
+    <string name="card_tambahan_cabang">Add Branch</string>
+    <string name="card_tambah_nama_cabang">Branch Name</string>
+    <string name="card_tambah_alamat_cabang">Branch Address</string>
+    <string name="card_tambah_layanan_cabang">Branch Service</string>
+    <string name="card_tambah_cabang_simpan">Save</string>
+    <string name="validasi_nama_cabang">Fill in the branch name</string>
+    <string name="validasi_alamat_cabang">Fill in the address</string>
+    <string name="validasi_layanan_cabang">Fill in the branch service</string>
+    <string name="tambah_cabang">Add Branch</string>
+    <string name="signUp">don\'t have an account? Sign Up</string>
+    <string name="JudulSignUp">Welcome!</string>
+    <string name="SubJudulSignUp">Please create an account and log in</string>
+    <string name="Nama_SignUp">Name</string>
+    <string name="NoHp_SignUp">No HP</string>
+    <string name="Pw_SignUp">Password</string>
+    <string name="btnSignUp">Register</string>
+    <string name="MyProfile">My Profile</string>
+    <string name="NamaPenggunaLogin">Name</string>
+    <string name="PersonalInformation">Personal Information</string>
+    <string name="Name">Name</string>
+    <string name="Passwordd">Password</string>
+    <string name="Phone">No HP</string>
+    <string name="Bio">Bio</string>
+    <string name="register_Nama">Enter Name</string>
+    <string name="register_NOhp">Enter No Handphone</string>
+    <string name="register_PW">Enter Password</string>
+    <string name="login_NoHP">Enter No Handphone</string>
+    <string name="login_pw">Enter Password</string>
 </resources>
