--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -68,15 +68,15 @@
     <string name="gagal_simpan_pelanggan">Tambah pelanggan gagal</string>
     <string name="TambahPegawai">TambahPegawai</string>
     <string name="TambahPelanggan">TambahPelanggan</string>
-    <string name="JudulLogin">Selamat Datang</string>
+    <string name="JudulLogin">Selamat Datang!</string>
     <string name="SubJudulLogin">Silahkan Login Untuk Melanjutkan</string>
     <string name="NoHp_Login">No HP</string>
     <string name="Pw_login">Kata Sandi</string>
-    <string name="btnLogin">Login</string>
+    <string name="btnLogin">Masuk</string>
     <string name="StatusPembayaran">Status Pembayaran</string>
     <string name="Layanan_Tambahan">Layanan Tambahan</string>
     <string name="Total_Bayar">Total Bayar</string>
-    <string name="Btn_statuspembayaran">"Btn "</string>
+    <string name="Btn_statuspembayaran">Metode</string>
     <string name="card_pelanggan_pilih_alamat">Alamat</string>
     <string name="card_pelanggan_pilih_nohp">No HP</string>
     <string name="card_pelanggan_pilih_nama">Nama Pelanggan</string>
@@ -86,4 +86,49 @@
     <string name="btntransaksi_pilihlayanan">Pilih Layanan</string>
     <string name="btntransaksi_tambahan">Tambahan</string>
     <string name="btntransaksi_proses">Proses</string>
+    <string name="card_data_layanan_harga">Harga</string>
+    <string name="card_data_tambahkan_id">Tambah ID</string>
+    <string name="card_data_tambahkan_nama">Tambahan :</string>
+    <string name="card_data_tambahkan_harga">Harga :</string>
+    <string name="tambah_tambahan">Tambahan</string>
+    <string name="tambahan_nama">Nama</string>
+    <string name="tambahan_harga">Harga</string>
+    <string name="tambah_pelanggan">Simpan</string>
+    <string name="validasi_nama_tambahkan">Nama tidak boleh kosong</string>
+    <string name="validasi_harga_tambahkan">Harga tidak boleh kosong</string>
+    <string name="tambah_tambahanlayanan">Simpan</string>
+    <string name="card_cabang_id">ID Cabang</string>
+    <string name="card_cabang_nama">Nama Cabang</string>
+    <string name="card_cabang_alamat">Alamat Cabang</string>
+    <string name="card_cabang_layanan">Layanan Cabang</string>
+    <string name="card_cabang_hubungi">Hubungi</string>
+    <string name="card_cabang_lihat">Lihat</string>
+    <string name="card_tambahan_cabang">Tambah Cabang</string>
+    <string name="card_tambah_nama_cabang">Nama Cabang</string>
+    <string name="card_tambah_alamat_cabang">Alamat Cabang</string>
+    <string name="card_tambah_layanan_cabang">Layanan Cabang</string>
+    <string name="card_tambah_cabang_simpan">Simpan</string>
+    <string name="validasi_nama_cabang">Nama cabang tidak boleh kosong</string>
+    <string name="validasi_alamat_cabang">Alamat tidak boleh kosong</string>
+    <string name="validasi_layanan_cabang">Layanan tidak boleh kosong</string>
+    <string name="tambah_cabang">Tambah Cabang</string>
+    <string name="signUp">Belum punya akun? Daftar</string>
+    <string name="JudulSignUp">Selamat Datang!</string>
+    <string name="SubJudulSignUp">"Silahkan buat akun lalu masuk "</string>
+    <string name="Nama_SignUp">Nama</string>
+    <string name="NoHp_SignUp">No HP</string>
+    <string name="Pw_SignUp">Kata Sandi</string>
+    <string name="btnSignUp">Daftar</string>
+    <string name="MyProfile">Profil Saya</string>
+    <string name="NamaPenggunaLogin">Nama</string>
+    <string name="PersonalInformation">Informasi Pribadi</string>
+    <string name="Name">Nama</string>
+    <string name="Passwordd">Kata Sandi</string>
+    <string name="Phone">No HP</string>
+    <string name="Bio">Bio</string>
+    <string name="register_Nama">Masukkan Nama Lengkap</string>
+    <string name="register_NOhp">Masukkan No Telepon</string>
+    <string name="register_PW">Masukkan Kata Sandi</string>
+    <string name="login_NoHP">Masukkan No Telepon</string>
+    <string name="login_pw">Masukkan Kata Sandi</string>
 </resources>
