--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,4 +85,49 @@
     <string name="btntransaksi_pilihlayanan">btntransaksi_pilihlayanan</string>
     <string name="btntransaksi_tambahan">btntransaksi_tambahan</string>
     <string name="btntransaksi_proses">btntransaksi_proses</string>
+    <string name="card_data_layanan_harga">card_data_layanan_harga</string>
+    <string name="card_data_tambahkan_id">card_data_tambahkan_id</string>
+    <string name="card_data_tambahkan_nama">card_data_tambahkan_nama</string>
+    <string name="card_data_tambahkan_harga">card_data_tambahkan_harga</string>
+    <string name="tambah_tambahan">tambah_tambahan</string>
+    <string name="tambahan_nama">tambahan_nama</string>
+    <string name="tambahan_harga">tambahan_harga</string>
+    <string name="tambah_pelanggan">tambah_pelanggan</string>
+    <string name="validasi_nama_tambahkan">validasi_nama_tambahkan</string>
+    <string name="validasi_harga_tambahkan">validasi_harga_tambahkan</string>
+    <string name="tambah_tambahanlayanan">tambah_tambahanlayanan</string>
+    <string name="card_cabang_id">card_cabang_id</string>
+    <string name="card_cabang_nama">card_cabang_nama</string>
+    <string name="card_cabang_alamat">card_cabang_alamat</string>
+    <string name="card_cabang_layanan">card_cabang_layanan</string>
+    <string name="card_cabang_hubungi">card_cabang_hubungi</string>
+    <string name="card_cabang_lihat">card_cabang_lihat</string>
+    <string name="card_tambahan_cabang">card_tambahan_cabang</string>
+    <string name="card_tambah_nama_cabang">card_tambah_nama_cabang</string>
+    <string name="card_tambah_alamat_cabang">card_tambah_alamat_cabang</string>
+    <string name="card_tambah_layanan_cabang">card_tambah_layanan_cabang</string>
+    <string name="card_tambah_cabang_simpan">card_tambah_cabang_simpan</string>
+    <string name="validasi_nama_cabang">validasi_nama_cabang</string>
+    <string name="validasi_alamat_cabang">validasi_alamat_cabang</string>
+    <string name="validasi_layanan_cabang">validasi_layanan_cabang</string>
+    <string name="tambah_cabang">tambah_cabang</string>
+    <string name="signUp">signUp</string>
+    <string name="JudulSignUp">JudulSignUp</string>
+    <string name="SubJudulSignUp">SubJudulSignUp</string>
+    <string name="Nama_SignUp">Nama_SignUp</string>
+    <string name="NoHp_SignUp">NoHp_SignUp</string>
+    <string name="Pw_SignUp">Pw_SignUp</string>
+    <string name="btnSignUp">btnSignUp</string>
+    <string name="MyProfile">MyProfile</string>
+    <string name="NamaPenggunaLogin">NamaPenggunaLogin</string>
+    <string name="PersonalInformation">PersonalInformation</string>
+    <string name="Name">Name</string>
+    <string name="Passwordd">Passwordd</string>
+    <string name="Phone">Phone</string>
+    <string name="Bio">Bio</string>
+    <string name="register_Nama">register_Nama</string>
+    <string name="register_NOhp">register_NOhp</string>
+    <string name="register_PW">register_PW</string>
+    <string name="login_NoHP">login_NoHP</string>
+    <string name="login_pw">login_pw</string>
 </resources>
